--- a/web.config
+++ b/web.config
@@ -5,15 +5,15 @@
     <!-- Required settings -->
     <add key="WSGI_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
     <!-- Your django path -->
-    <add key="PYTHONPATH" value="C:\inetpub\wwwroot\demodjango" /> 
+    <add key="PYTHONPATH" value="C:\inetpub\wwwroot\EventLink" /> 
     <!-- Your djangoname.settings -->
-    <add key="DJANGO_SETTINGS_MODULE" value="demodjango.settings" />
+    <add key="DJANGO_SETTINGS_MODULE" value="EventLink.settings" />
   </appSettings>
 
 
     <system.webServer>
         <handlers>
-            <add name="demodjango" path="*" verb="*" modules="FastCgiModule" scriptProcessor="C:\Python38\python.exe|C:\Python38\Lib\site-packages\wfastcgi.py" resourceType="Unspecified" />
+            <add name="EventLink" path="*" verb="*" modules="FastCgiModule" scriptProcessor="C:\Python38\python.exe|C:\Python38\Lib\site-packages\wfastcgi.py" resourceType="Unspecified" />
         </handlers>
     </system.webServer>
 </configuration>
